--- a/index.html
+++ b/index.html
@@ -1,32 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" href="stylesheets/index.css">
-    <script src="javascripts/index.js"></script>
-    <title>Stuy A Capella</title>
-  </head>
-  <body>
-    <div id="background">
-    </div>
-
-
-    <div id="header">
-      <div id="stuyvesant"></div>
-      <div id="acapella"></div>
-    </div>
-
-    <div id="floater-left">
-      <h3>About Us</h3>
-      <h3>Repertoire</h3>
-      <h3>Performances</h3>
-      <h3>Auditions</h3>
-      <h3>Contact Us</h3>
-    </div>
-
-    <div id="body">
-      <br/>
-      <p>go go stuycapella!</p>
-      <p>Site under construction.</p>
-    </div>
-  </body>
-</html>
+---
+layout: base
+title: Home
+---
+<p>go go stuycapella!</p>
+<p>Site under construction.</p>
